--- a/Tagebuch/1.Woche_April.md
+++ b/Tagebuch/1.Woche_April.md
@@ -4,3 +4,8 @@
 3. Seine Worte haben sich mir tief ins Herz eingeprägt.
 4. Ich möchte mir diesen wichtigen Termin einprägen, damit ich ihn nicht vergesse.
 5. Er hat den Auftrag zu unserer vollsten Zufriedenheit ausgeführt.
+
+______
+
+1. Er ist seinem Bruder sehr ähnlich.
+2. Eltern kuscheln gern mit ihren Neugeborenen.
