--- a/Tagesbuch/1.Woche_April.md
+++ b/Tagesbuch/1.Woche_April.md
@@ -9,3 +9,41 @@ ______
 
 1. Er ist seinem Bruder sehr ähnlich.
 2. Eltern kuscheln gern mit ihren Neugeborenen.
+
+_____
+1. Der Arzt zieht so an, um Viren abzuwehren.
+
+| DEUTSCH                                          | ENGLISCH              | INFO  |
+| ------------------------------------------------ | --------------------- | ----- |
+| das Stadion, -dien                               | stadium               |       |
+| faul                                             | adj. lazy             |       |
+| an/greifen, greift an, griff an, hat angegriffen | to attack             |       |
+| ab/wehren                                        | to prevent            |       |
+| pfeifen                                          | to whisle             |       |
+| die Aussicht                                     | prospect              |       |
+| an/feuern                                        | to cheer              |       |
+| feuern                                           | to light              | feuer |
+| die Mauer, -n                                    | wall                  |       |
+| das Kenntnis, -se                                | awareness             |       |
+| die Niederlage, -n                               | defeat                |       |
+| Ästhetik                                         | aesthetics            |       |
+| der Konkurrent, -en                              | rival                 |       |
+| die Kurve, -n                                    | curve                 |       |
+| ab/drehen                                        | to turn off           |       |
+| einzig                                           | adj. sole adv. solely |       |
+| vertraut                                         | adj. familiar         |       |
+| die Umgebung, -en                                | environment           |       |
+| die Kostbarkeit, -en                             | treasure              |       |
+
+1. In seiner Rede griff der Politiker mehrere seiner Konkurrenten an.
+2. Viele ältere Menschen fühlen sich in einer vertrauten Umgebung am wohlsten.
+
+_____
+
+| DEUTSCH       | ENGLISCH | INFO |
+| ------------- | -------- | ---- |
+| das Zeitalter | age      |      |
+|               |          |      |
+|               |          |      |
+
+1. Unser Zeitalter ist gekennzeichnet durch technologische Entwicklungen.
