--- a/Tagesbuch/Juni 2024.md
+++ b/Tagesbuch/Juni 2024.md
@@ -1,16 +1,54 @@
+## 20.
 
-| DEUTSCH                                               | ENGLISCH                | INFO   |
-| ----------------------------------------------------- | ----------------------- | ------ |
-| sperren                                               | to block, lock, disable | +Akku. |
-| treu                                                  | adj. loyal, faithful    |        |
-| <font color="#00b050">das</font> Pendel, -s           | pendulum                |        |
-| <font color="#ff0000">der</font> Kurs, -e             | rate                    |        |
-| <font color="#ff0000">der</font> Balk<u>o</u>n, -e/-s | balcony                 |        |
-| <font color="#0070c0">die</font> Säule, -n            | pillar, column          |        |
-| der Rebell, -en                                       | rebel                   |        |
-| überleben                                             | to survive, outlast     |        |
-| <font color="#ff0000">der</font> Angriff, -e          | attack                  |        |
-| klettern                                              | to climb                |        |
+| DEUTSCH                                               | ENGLISCH                | INFO       |
+| ----------------------------------------------------- | ----------------------- | ---------- |
+| sperren                                               | to block, lock, disable | +Akku.     |
+| treu                                                  | adj. loyal, faithful    |            |
+| <font color="#00b050">das</font> Pendel, -s           | pendulum                |            |
+| <font color="#ff0000">der</font> Kurs, -e             | rate                    |            |
+| <font color="#ff0000">der</font> Balk<u>o</u>n, -e/-s | balcony                 |            |
+| <font color="#0070c0">die</font> Säule, -n            | pillar, column          |            |
+| der Rebell, -en                                       | rebel                   |            |
+| überleben                                             | to survive, outlast     |            |
+| <font color="#ff0000">der</font> Angriff, -e          | attack                  |            |
+| klettern                                              | to climb                |            |
+| die Großzügigkeit, -en                                | generosity              |            |
+| die Haut, Häute                                       | skin                    | #🚨Achtung |
+| erneut                                                | adv. again              |            |
 
 1. Ich ließ die Bank meine verlorene Kreditkarte sperren.{I had the bank block my lost credit card.}
 2. Zum Glück überlebte der Mann den Angriff.{*Fortunately, the man survived the assault.*}
+
+## 21.
+
+| DEUTSCH                                          | ENGLISCH                      | INFO                |
+| ------------------------------------------------ | ----------------------------- | ------------------- |
+| <font color="#0070c0">die</font> Frucht, Früchte | fruit                         | #⚠️Plural           |
+| treu                                             | adj. loyal, faithful          |                     |
+| <font color="#ff0000">der</font> Anreiz, -e      | incentive                     |                     |
+| explodieren                                      | to explode                    |                     |
+| <font color="#00b050">das</font> Weltall         | space                         | = Kosmos, Universum |
+| <font color="#0070c0">die</font> Länge           | length                        |                     |
+| <font color="#00b050">das</font> Dreieck, -e     | triangle                      |                     |
+| <font color="#0070c0">die</font> Linie, -n       | line                          |                     |
+| offen                                            | adj. open, overt, open-minded |                     |
+| hämmern                                          | to hammer                     | +Akku.              |
+| beauftragen                                      | to commission, assign         | +Akku.              |
+
+## 22. 
+
+
+| DEUTSCH | ENGLISCH             | INFO      |
+| ------- | -------------------- | --------- |
+| platt   | flat                 | #⚠️Plural |
+| treu    | adj. loyal, faithful |           |
+
+## 23.
+
+| DEUTSCH                                         | ENGLISCH        | INFO |
+| ----------------------------------------------- | --------------- | ---- |
+| <font color="#ff0000">der</font> Zyklus, Zyklen | cycle           |      |
+| <font color="#0070c0">die</font> Wahrheit, -en  | truth           |      |
+| wahr                                            | adj. true, real |      |
+| gefahrlos                                       | adj. safe       |      |
+| <font color="#ff0000">der</font> Pfarrer, -n    | pastor, priest  |      |
