--- a/Tagesbuch/Juni 2024.md
+++ b/Tagesbuch/Juni 2024.md
@@ -45,10 +45,14 @@
 
 ## 23.
 
-| DEUTSCH                                         | ENGLISCH        | INFO |
-| ----------------------------------------------- | --------------- | ---- |
-| <font color="#ff0000">der</font> Zyklus, Zyklen | cycle           |      |
-| <font color="#0070c0">die</font> Wahrheit, -en  | truth           |      |
-| wahr                                            | adj. true, real |      |
-| gefahrlos                                       | adj. safe       |      |
-| <font color="#ff0000">der</font> Pfarrer, -n    | pastor, priest  |      |
+| DEUTSCH                                         | ENGLISCH                 | INFO   |
+| ----------------------------------------------- | ------------------------ | ------ |
+| <font color="#ff0000">der</font> Zyklus, Zyklen | cycle                    |        |
+| <font color="#0070c0">die</font> Wahrheit, -en  | truth                    |        |
+| wahr                                            | adj. true, real          |        |
+| gefahrlos                                       | adj. safe                |        |
+| <font color="#ff0000">der</font> Pfarrer, -n    | pastor, priest           |        |
+| sichern                                         | to secure, ensure        | +Akku. |
+| ständig                                         | adj. permanent, constant |        |
+| <font color="#0070c0">die</font> Version, -en   | version                  |        |
+| <font color="#0070c0">die</font> Software, -s   | software                 |        |
