--- a/Tagesbuch/Juni 2024.md
+++ b/Tagesbuch/Juni 2024.md
@@ -51,8 +51,20 @@
 | <font color="#0070c0">die</font> Wahrheit, -en  | truth                    |        |
 | wahr                                            | adj. true, real          |        |
 | gefahrlos                                       | adj. safe                |        |
-| <font color="#ff0000">der</font> Pfarrer, -n    | pastor, priest           |        |
+| <font color="#ff0000">der</font> Pfarrer, -     | pastor, priest           |        |
 | sichern                                         | to secure, ensure        | +Akku. |
 | ständig                                         | adj. permanent, constant |        |
 | <font color="#0070c0">die</font> Version, -en   | version                  |        |
 | <font color="#0070c0">die</font> Software, -s   | software                 |        |
+| schmelzen, schmelzt, schmolz, hat geschmolzen   | to melt                  |        |
+| ab/kühlen                                       | to cool down             |        |
+| das Lokal                                       | resaurant, bar           |        |
+
+## 25.
+
+| DEUTSCH             | ENGLISCH             | INFO |
+| ------------------- | -------------------- | ---- |
+| die Abfolge, -n     | sequence, succession |      |
+| die Tonaufnahme, -n | voice recording      |      |
+| an/hören            | to listen            |      |
+
