--- a/Tagesbuch/Juni 2024.md
+++ b/Tagesbuch/Juni 2024.md
@@ -62,9 +62,20 @@
 
 ## 25.
 
-| DEUTSCH             | ENGLISCH             | INFO |
-| ------------------- | -------------------- | ---- |
-| die Abfolge, -n     | sequence, succession |      |
-| die Tonaufnahme, -n | voice recording      |      |
-| an/hören            | to listen            |      |
+| DEUTSCH                                          | ENGLISCH             | INFO |
+| ------------------------------------------------ | -------------------- | ---- |
+| <font color="#0070c0">die</font> Abfolge, -n     | sequence, succession |      |
+| <font color="#0070c0">die</font> Tonaufnahme, -n | voice recording      |      |
+| an/hören                                         | to listen            |      |
 
+## 27. 
+
+| DEUTSCH                                       | ENGLISCH      | INFO |
+| --------------------------------------------- | ------------- | ---- |
+| eilig                                         | adj. urgent   |      |
+| <font color="#0070c0">die</font> Einheit, -en | unit          |      |
+| üblicherweise                                 | adv. usually  |      |
+| klopfen                                       | to knock, tap |      |
+
+1. Ich habe es eilig.{*there is something that's urgent to me*}
+2. Preise werden üblicherweise pro Einheit berechnet.{*Prices are usually calculated per unit.*}
