--- a/Tagesbuch/Juni 2024.md
+++ b/Tagesbuch/Juni 2024.md
@@ -70,12 +70,21 @@
 
 ## 27. 
 
-| DEUTSCH                                       | ENGLISCH      | INFO |
-| --------------------------------------------- | ------------- | ---- |
-| eilig                                         | adj. urgent   |      |
-| <font color="#0070c0">die</font> Einheit, -en | unit          |      |
-| üblicherweise                                 | adv. usually  |      |
-| klopfen                                       | to knock, tap |      |
+| DEUTSCH                                       | ENGLISCH             | INFO |
+| --------------------------------------------- | -------------------- | ---- |
+| eilig                                         | adj. urgent          |      |
+| <font color="#0070c0">die</font> Einheit, -en | unit                 |      |
+| üblicherweise                                 | adv. usually         |      |
+| klopfen                                       | to knock, tap        |      |
+| einwandfrei                                   | flawless, impeccable |      |
+| der einwand, -wände                           | objection            |      |
 
 1. Ich habe es eilig.{*there is something that's urgent to me*}
 2. Preise werden üblicherweise pro Einheit berechnet.{*Prices are usually calculated per unit.*}
+
+
+## 28.
+
+| DEUTSCH              | ENGLISCH   | INFO |
+| -------------------- | ---------- | ---- |
+| sich(Akku.) verirren | to be lost |      |
